# aqa_course

./: .gitignore  pyproject.toml
.github/workflows/: run_tests.yml
allure_course/: conftest.py  test_attachments.py  test_basics.py  test_labels.py  test_magic.py  test_shop.py  test_steps.py
allure_course/allure-report/: index.html
allure_course/allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure_course/allure-report/data/attachments/: fe8ef163a54a527c.txt
allure_course/allure-report/export/: influxDbData.txt  prometheusData.txt
allure_course/allure-report/history/: duration-trend.json  history.json
allure_course/allure-report/widgets/: history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
faker_codes/: lesson1.py  lesson2.py  test_lesson3.py  test_lesson4.py  test_lesson5.py  test_lesson6.py
logging_course/: api_clients.py  lesson1.py  lesson2.py  lesson3.py  logger_config.py  my_logger.py  test_api.py  test_cart.py  test_login.py
psycopg2_course/: db_client.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  test_db.py  test_db_client.py
pydantic_codes/: final_task.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py
request_codes/: lesson1.py  lesson10.py  lesson11.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py  lesson8.py  lesson9.py  script.py
request_codes/project_final/: api_client.py  conftest.py
request_codes/project_final/tests/: test_framework.py
(+4 files in other folders)
