[project]
name = "aqa-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.23.0",
    "jsonschema>=4.26.0",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "requests>=2.34.2",
    "ruff>=0.15.20",
]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] [%(levelname)s] [%(name)s] => %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]